--- a/src/index.html
+++ b/src/index.html
@@ -103,6 +103,9 @@
           body.accessible {
               background-color: #1A1A1A;
           }
+          body.custom {
+              background-color: #1A1A1A;
+          }
 
       </style>
       {{EXTRA_CONFIG}}
